--- a/index.html
+++ b/index.html
@@ -1,1 +1,43 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MMSK Holdings</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <div class="nav-container">
+            <h1 class="logo">MMSK Holdings</h1>
+            <nav>
+                <ul class="nav-links">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main>
+        <section class="hero">
+            <h2>Innovate. Lead. Succeed.</h2>
+            <p>Building a legacy through strategic investments and innovation.</p>
+            <a href="about.html" class="btn">Learn More</a>
+        </section>
+        <section class="founders">
+            <h2>Our Founders</h2>
+            <div class="founders-list">
+                <div class="founder">Mohannad</div>
+                <div class="founder">Musa</div>
+                <div class="founder">San Francisco</div>
+                <div class="founder">Ketaav</div>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2024 MMSK Holdings. All rights reserved.</p>
+    </footer>
+</body>
+</html>
 
