--- a/about.html
+++ b/about.html
@@ -1,1 +1,42 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About - MMSK Holdings</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <div class="nav-container">
+            <h1 class="logo">MMSK Holdings</h1>
+            <nav>
+                <ul class="nav-links">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main>
+        <section class="hero">
+            <h2>About Us</h2>
+            <p>At MMSK Holdings, we strive to redefine investment and innovation.</p>
+        </section>
+        <section class="founders">
+            <h2>Meet Our Founders</h2>
+            <div class="founders-list">
+                <div class="founder">Mohannad - CEO</div>
+                <div class="founder">Musa - CFO</div>
+                <div class="founder">San Francisco - CTO</div>
+                <div class="founder">Ketaav - COO</div>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2024 MMSK Holdings. All rights reserved.</p>
+    </footer>
+</body>
+</html>
 
