--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,41 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact - MMSK Holdings</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <div class="nav-container">
+            <h1 class="logo">MMSK Holdings</h1>
+            <nav>
+                <ul class="nav-links">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main>
+        <section class="hero">
+            <h2>Contact Us</h2>
+            <p>Reach out to us for inquiries and partnerships.</p>
+        </section>
+        <section class="contact-form">
+            <form>
+                <input type="text" placeholder="MMSK-holding" required><br>
+                <input type="email" placeholder="mmsk01958@gmail.com" required><br>
+                <textarea placeholder="Your Message" required></textarea><br>
+                <button type="submit" class="btn">Send Message</button>
+            </form>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2024 MMSK Holdings. All rights reserved.</p>
+    </footer>
+</body>
+</html>
 
