--- a/about.html
+++ b/about.html
@@ -27,10 +27,10 @@
         <section class="founders">
             <h2>Meet Our Founders</h2>
             <div class="founders-list">
-                <div class="founder">Mohannad - CEO</div>
-                <div class="founder">Musa - CFO</div>
-                <div class="founder">San Francisco - CTO</div>
-                <div class="founder">Ketaav - COO</div>
+                <div class="founder">Mohannad - Marketing and Brand manager</div>
+                <div class="founder">Musa - Compliance manager</div>
+                <div class="founder">San Francisco - Finance and investment manager</div>
+                <div class="founder">Ketaav - Operations & Strategy Manager</div>
             </div>
         </section>
     </main>
