--- a/index.html
+++ b/index.html
@@ -3,35 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="MMSK Holdings - Building a legacy through strategic investments and innovation.">
     <title>MMSK Holdings</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <div class="nav-container">
-            <h1 class="logo">MMSK Holdings</h1>
+            <h1 class="logo" aria-label="MMSK Holdings Logo">MMSK Holdings</h1>
             <nav>
                 <ul class="nav-links">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="index.html" aria-label="Go to Home Page">Home</a></li>
+                    <li><a href="about.html" aria-label="Learn more about us">About</a></li>
+                    <li><a href="contact.html" aria-label="Get in touch with us">Contact</a></li>
                 </ul>
             </nav>
         </div>
     </header>
     <main>
-        <section class="hero">
-            <h2>Innovate. Lead. Succeed.</h2>
+        <section class="hero" aria-labelledby="hero-heading">
+            <h2 id="hero-heading">Innovate. Lead. Succeed.</h2>
             <p>Building a legacy through strategic investments and innovation.</p>
-            <a href="about.html" class="btn">Learn More</a>
+            <a href="about.html" class="btn" aria-label="Learn more about MMSK Holdings">Learn More</a>
         </section>
-        <section class="founders">
-            <h2>Our Founders</h2>
+        <section class="founders" aria-labelledby="founders-heading">
+            <h2 id="founders-heading">Our Founders</h2>
             <div class="founders-list">
-                <div class="founder">Mohannad</div>
-                <div class="founder">Musa</div>
-                <div class="founder">San Francisco</div>
-                <div class="founder">Ketaav</div>
+                <div class="founder" aria-label="Founder: Mohannad">Mohannad</div>
+                <div class="founder" aria-label="Founder: Musa">Musa</div>
+                <div class="founder" aria-label="Founder: San Francisco">San Francisco</div>
+                <div class="founder" aria-label="Founder: Ketaav">Ketaav</div>
             </div>
         </section>
     </main>
@@ -40,4 +41,3 @@
     </footer>
 </body>
 </html>
-
