--- a/about.html
+++ b/about.html
@@ -27,10 +27,30 @@
         <section class="founders">
             <h2>Meet Our Founders</h2>
             <div class="founders-list">
-                <div class="founder">Mohannad - Marketing and Brand manager</div>
-                <div class="founder">Musa - Compliance manager</div>
-                <div class="founder">San Francisco - Finance and investment manager</div>
-                <div class="founder">Ketaav - Operations & Strategy Manager</div>
+                <div class="founder">
+                    <figure>
+                        <img src="mohannad.jpg" alt="Mohannad - Marketing and Brand Manager">
+                        <figcaption>Mohannad - Marketing and Brand Manager</figcaption>
+                    </figure>
+                </div>
+                <div class="founder">
+                    <figure>
+                        <img src="musa.jpg" alt="Musa - Compliance Manager">
+                        <figcaption>Musa - Compliance Manager</figcaption>
+                    </figure>
+                </div>
+                <div class="founder">
+                    <figure>
+                        <img src="san_francisco.jpg" alt="San Francisco - Finance and Investment Manager">
+                        <figcaption>San Francisco - Finance and Investment Manager</figcaption>
+                    </figure>
+                </div>
+                <div class="founder">
+                    <figure>
+                        <img src="ketaav.jpg" alt="Ketaav - Operations & Strategy Manager">
+                        <figcaption>Ketaav - Operations & Strategy Manager</figcaption>
+                    </figure>
+                </div>
             </div>
         </section>
     </main>
@@ -39,4 +59,3 @@
     </footer>
 </body>
 </html>
-
