--- a/about.html
+++ b/about.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About - MMSK Holdings</title>
+    <title>About - Yūga Captials</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <div class="nav-container">
-            <h1 class="logo">MMSK Holdings</h1>
+            <h1 class="logo">Yūga Captials</h1>
             <nav>
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
@@ -29,20 +29,14 @@
             <div class="founders-list">
                 <div class="founder">
                     <figure>
-                        <img src="mohannad.jpg" alt="Mohannad - Marketing and Brand Manager">
-                        <figcaption>Mohannad - Marketing and Brand Manager</figcaption>
+                        <img src="mohannad.jpg" alt="Mohannad - Marketing, Finance and Brand Manager">
+                        <figcaption>Mohannad - Marketing, Finance and Brand Manager</figcaption>
                     </figure>
                 </div>
                 <div class="founder">
                     <figure>
-                        <img src="musa.jpg" alt="Musa - Compliance Manager">
-                        <figcaption>Musa - Compliance Manager</figcaption>
-                    </figure>
-                </div>
-                <div class="founder">
-                    <figure>
-                        <img src="san_francisco.jpg" alt="San Francisco - Finance and Investment Manager">
-                        <figcaption>San Francisco - Finance and Investment Manager</figcaption>
+                        <img src="musa.jpg" alt="George - Compliance and Investment Manager">
+                        <figcaption>Musa - Compliance and Investment Manager</figcaption>
                     </figure>
                 </div>
                 <div class="founder">
@@ -55,7 +49,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 MMSK Holdings. All rights reserved.</p>
+        <p>&copy; 2024  Yūga Captials. All rights reserved.</p>
     </footer>
 </body>
 </html>
