--- a/contact.html
+++ b/contact.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact - MMSK Holdings</title>
+    <title>Contact - Yūga Captials</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <div class="nav-container">
-            <h1 class="logo">MMSK Holdings</h1>
+            <h1 class="logo">Yūga Captials</h1>
             <nav>
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
@@ -43,7 +43,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 MMSK Holdings. All rights reserved.</p>
+        <p>&copy; 2025 Yūga Captials. All rights reserved.</p>
     </footer>
 </body>
 </html>
