--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="MMSK Holdings - Building a legacy through strategic investments and innovation.">
-    <title>MMSK Holdings</title>
+    <title>Yūga Captials</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -30,14 +30,13 @@
             <h2 id="founders-heading">Our Founders</h2>
             <div class="founders-list">
                 <div class="founder" aria-label="Founder: Mohannad">Mohannad</div>
-                <div class="founder" aria-label="Founder: Musa">Musa</div>
-                <div class="founder" aria-label="Founder: San Francisco">San Francisco</div>
+                <div class="founder" aria-label="Founder: George">George</div>
                 <div class="founder" aria-label="Founder: Ketaav">Ketaav</div>
             </div>
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 MMSK Holdings. All rights reserved.</p>
+        <p>&copy; 2026 MMSK Holdings. All rights reserved.</p>
     </footer>
 </body>
 </html>
