--- a/about.html
+++ b/about.html
@@ -35,13 +35,13 @@
                 </div>
                 <div class="founder">
                     <figure>
-                        <img src="musa.jpg" alt="George - Compliance and Investment Manager">
+                        <img src="image_2025-03-05_203304967.png" alt="George - Compliance and Investment Manager">
                         <figcaption>Musa - Compliance and Investment Manager</figcaption>
                     </figure>
                 </div>
                 <div class="founder">
                     <figure>
-                        <img src="ketaav.jpg" alt="Ketaav - Operations & Strategy Manager">
+                        <img src="WIN_20250305_20_32_53_Pro.jpg" alt="Ketaav - Operations & Strategy Manager">
                         <figcaption>Ketaav - Operations & Strategy Manager</figcaption>
                     </figure>
                 </div>
