--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
             <div class="founders-list">
                 <div class="founder">
                     <figure>
-                        <img src="mohannad.jpg" alt="Mohannad - Marketing, Finance and Brand Manager">
+                        <img src="Screenshot 2025-03-05 203158.png" alt="Mohannad - Marketing, Finance and Brand Manager">
                         <figcaption>Mohannad - Marketing, Finance and Brand Manager</figcaption>
                     </figure>
                 </div>
