--- a/about.html
+++ b/about.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About - Yūga Captials</title>
+    <title>About - Yūga Capitals</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <div class="nav-container">
-            <h1 class="logo">Yūga Captials</h1>
+            <h1 class="logo">Yūga Capitals</h1>
             <nav>
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
@@ -28,28 +28,31 @@
             <h2>Meet Our Founders</h2>
             <div class="founders-list">
                 <div class="founder">
-                    <figure>
-                        <img src="Screenshot 2025-03-05 203158.png" alt="Mohannad - Marketing, Finance and Brand Manager">
-                        <figcaption>Mohannad - Marketing, Finance and Brand Manager</figcaption>
-                    </figure>
+                    <div class="founder-container">
+                        <img src="founder1.png" alt="Mohannad - Marketing, Finance and Brand Manager">
+                        <h3>Mohannad</h3>
+                        <p>Marketing, Finance, and Brand Manager</p>
+                    </div>
                 </div>
                 <div class="founder">
-                    <figure>
-                        <img src="image_2025-03-05_203304967.png" alt="George - Compliance and Investment Manager">
-                        <figcaption>Musa - Compliance and Investment Manager</figcaption>
-                    </figure>
+                    <div class="founder-container">
+                        <img src="founder2.png" alt="Musa - Compliance and Investment Manager">
+                        <h3>Musa</h3>
+                        <p>Compliance and Investment Manager</p>
+                    </div>
                 </div>
                 <div class="founder">
-                    <figure>
-                        <img src="WIN_20250305_20_32_53_Pro.jpg" alt="Ketaav - Operations & Strategy Manager">
-                        <figcaption>Ketaav - Operations & Strategy Manager</figcaption>
-                    </figure>
+                    <div class="founder-container">
+                        <img src="founder3.png" alt="Ketaav - Operations & Strategy Manager">
+                        <h3>Ketaav</h3>
+                        <p>Operations & Strategy Manager</p>
+                    </div>
                 </div>
             </div>
         </section>
     </main>
     <footer>
-        <p>&copy; 2025 Yūga Captials. All rights reserved.</p>
+        <p>&copy; 2025 Yūga Capitals. All rights reserved.</p>
     </footer>
 </body>
 </html>
