--- a/about.html
+++ b/about.html
@@ -19,11 +19,13 @@
             </nav>
         </div>
     </header>
+    
     <main>
         <section class="hero">
             <h2>About Us</h2>
-            <p>At MMSK Holdings, we strive to redefine investment and innovation.</p>
+            <p>At Yūga Capitals, we strive to redefine investment and innovation.</p>
         </section>
+
         <section class="founders">
             <h2>Meet Our Founders</h2>
             <div class="founders-list">
@@ -51,8 +53,11 @@
             </div>
         </section>
     </main>
+
     <footer>
         <p>&copy; 2025 Yūga Capitals. All rights reserved.</p>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
