--- a/contact.html
+++ b/contact.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact - Yūga Captials</title>
+    <title>Contact - Yūga Capitals</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <div class="nav-container">
-            <h1 class="logo">Yūga Captials</h1>
+            <h1 class="logo">Yūga Capitals</h1>
             <nav>
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
@@ -19,15 +19,18 @@
             </nav>
         </div>
     </header>
+    
     <main>
         <section class="hero">
             <h2>Contact Us</h2>
             <p>Reach out to us for inquiries and partnerships.</p>
         </section>
+
         <section class="contact-form">
             <form action="submit-form.php" method="POST">
                 <fieldset>
                     <legend>Contact Information</legend>
+
                     <label for="name">Full Name</label>
                     <input type="text" id="name" name="name" placeholder="MMSK-holding" required aria-label="Enter your full name"><br>
 
@@ -42,8 +45,11 @@
             </form>
         </section>
     </main>
+
     <footer>
-        <p>&copy; 2025 Yūga Captials. All rights reserved.</p>
+        <p>&copy; 2025 Yūga Capitals. All rights reserved.</p>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
