--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="MMSK Holdings - Building a legacy through strategic investments and innovation.">
-    <title>Yūga Captials</title>
+    <title>Yūga Capitals</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -20,12 +20,14 @@
             </nav>
         </div>
     </header>
+    
     <main>
         <section class="hero" aria-labelledby="hero-heading">
             <h2 id="hero-heading">Innovate. Lead. Succeed.</h2>
             <p>Building a legacy through strategic investments and innovation.</p>
             <a href="about.html" class="btn" aria-label="Learn more about MMSK Holdings">Learn More</a>
         </section>
+        
         <section class="founders" aria-labelledby="founders-heading">
             <h2 id="founders-heading">Our Founders</h2>
             <div class="founders-list">
@@ -35,6 +37,7 @@
             </div>
         </section>
     </main>
+
     <footer>
         <p>&copy; 2026 MMSK Holdings. All rights reserved.</p>
     </footer>
