--- a/about.html
+++ b/about.html
@@ -31,21 +31,21 @@
             <div class="founders-list">
                 <div class="founder">
                     <div class="founder-container">
-                        <img src="founder1.png" alt="Mohannad - Marketing, Finance and Brand Manager">
+                        <img src="Screenshot 2025-03-05 203158.png" alt="Mohannad - Marketing, Finance and Brand Manager">
                         <h3>Mohannad</h3>
                         <p>Marketing, Finance, and Brand Manager</p>
                     </div>
                 </div>
                 <div class="founder">
                     <div class="founder-container">
-                        <img src="founder2.png" alt="Musa - Compliance and Investment Manager">
+                        <img src="image_2025-03-05_203304967.png" alt="George - Compliance and Investment Manager">
                         <h3>Musa</h3>
                         <p>Compliance and Investment Manager</p>
                     </div>
                 </div>
                 <div class="founder">
                     <div class="founder-container">
-                        <img src="founder3.png" alt="Ketaav - Operations & Strategy Manager">
+                        <img src="WIN_20250305_20_32_53_Pro.jpg" alt="Ketaav - Operations & Strategy Manager">
                         <h3>Ketaav</h3>
                         <p>Operations & Strategy Manager</p>
                     </div>
