--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="nav-container">
-            <h1 class="logo" aria-label="MMSK Holdings Logo">MMSK Holdings</h1>
+            <h1 class="logo" aria-label="Yūga Capitals Logo"Yūga Capitals</h1>
             <nav>
                 <ul class="nav-links">
                     <li><a href="index.html" aria-label="Go to Home Page">Home</a></li>
