--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
                 <div class="founder">
                     <div class="founder-container">
                         <img src="image_2025-03-05_203304967.png" alt="George - Compliance and Investment Manager">
-                        <h3>Musa</h3>
+                        <h3>George</h3>
                         <p>Compliance and Investment Manager</p>
                     </div>
                 </div>
