--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
                 </div>
                 <div class="founder">
                     <div class="founder-container">
-                        <img src="image_2025-03-05_203304967.png" alt="Ketaav - Operations & Strategy Manager">
+                        <img src="WIN_20250331_20_19_24_Pro.jpg" alt="Ketaav - Operations & Strategy Manager">
                         <h3>Ketaav</h3>
                         <p>Operations & Strategy Manager</p>
                     </div>
